# pic2vec

./: .gitignore  CMakeLists.txt  Makefile  README.md  description.yml  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
cmake/: embed_model.cmake
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: embed_tiny_model.sh
src/: eupe_extension.cpp  image_utils.cpp  onnx_inference.cpp  pic2vec_extension.cpp
src/embedded/: tiny_model_data.cpp
src/include/: embedded_model.hpp  eupe_extension.hpp  pic2vec_extension.hpp  pic2vec_rust_ffi.h
test/sql/: eupe.test  pic2vec.test
