[package]
name = "pic2vec_core"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "pic2vec_core"
crate-type = ["staticlib"]

[dependencies]
tract-onnx = "0.21"
ndarray = "0.16"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "bmp", "tiff", "gif", "webp"] }
once_cell = "1"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
